src/app/components/footer/footer.component.scss
.footer {
  background: var(--clr-black-800);
}

.footer__logo {
  padding-top: 3rem;
  margin: 0 auto;
  border-top: 4px solid var(--clr-primary);
}

.nav {
  margin: 3rem 0;
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 1rem;
  li a {
    display: block;
    color: var(--clr-white-900);
    text-align: center;
    font-size: 0.8125rem;
    font-weight: 700;
    letter-spacing: 0.125rem;
    text-transform: uppercase;
    &:hover {
      color: var(--clr-primary);
    }
  }
}

.footer__description{
  color: var(--clr-white-900);
  text-align: center;
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.66;
  opacity: 0.5;
  span{
    display: block;
    margin-top: 3rem;
  }
}

.footer__socials {
  margin-top: 3rem;
  padding-bottom: 2.38rem;
  display: flex;
  justify-content: center;
  gap: 1rem;
  a img:hover {
    filter: brightness(0) saturate(100%) invert(80%) sepia(47%) saturate(3119%)
      hue-rotate(320deg) brightness(85%) contrast(100%);
  }
}

@media (min-width: 43em) {
  .footer__logo {
    padding-top: 3.5rem;
    margin: 0 0 0 2.44rem;
  }

  .nav {
    margin: 2rem 0 2rem 2.44rem;
    flex-direction: row;
    justify-content: left;
    gap: 2.12rem;
  }

  .footer__description {
    text-align: left;
    margin-left: 2.44rem;
    span{
      margin-top: 5rem;
    }
  }

  .grid-area {
    display: grid;
    grid-auto-flow: column;
  }

  .footer__socials {
    margin-top: 9.5rem;
    margin-right: 2.5rem;
  }
}

@media (min-width: 75em) {
  .footer__nav{
    width: 69.375rem;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
  }
  .footer__logo {
    padding-top: 4.44rem;
  }
  .nav {
    margin-top: 4.69rem;
  }
  .grid-area {
    width: 69.375rem;
    margin: 0 auto;
    justify-content: space-between;
  }
  .footer__description {
    width: 33.75rem;
    span{
      margin-top: 3.5rem;
      padding-bottom: 3rem;
    }
  }
  .footer__socials {
    margin-top: 4.56rem;
    margin-right: 0;
  }
}

